[package]
name = "q-seal"
version = "0.1.0"
edition = "2024"

[dependencies]
q-seal-core = { path = "core" }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
rsa = "0.9.8"
rand_core = "0.9.3"
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.1"
serde_json = "1.0"
secrecy = "0.10.3"
rpassword = "7.4.0"
zeroize = "1.8.1"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
