[package]
name = "q-seal-core"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
rand = "0.9.1"
base64 = "0.22.1"
pqcrypto = "0.18.1"
pqcrypto-kyber = "0.8.1"
pqcrypto-traits = "0.3.5"
serde = { version = "1.0.219", features = ["derive"] }
aes-gcm = "0.10.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
rsa = "0.9.8"
rand_core = "0.9.3"
serde_json = "1.0"
argon2 = "0.5.3"
secrecy = "0.10.3"
chrono = "0.4"
thiserror = "2.0.12"
